Fixed nav logo link

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header>
       <!-- Logo credit: Leo by Flaticon from Freepik -->
       <div class='header_inner'>
-        <a id="logo" href="/"><img src="./images/logo_banner_small.png" alt="Logo banner small" /></a>
+        <a id="logo" href="#"><img src="./images/logo_banner_small.png" alt="Logo banner small" /></a>
         <nav>
           <a href="http://goo.gl/forms/aHwza9iTZHiI0ZS13" target="_blank">Contact Us</a> <!-- google forms contact page here -->
         </nav>
